--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@next/font": "13.1.6",
+    "@polkadot/api": "^9.14.1",
+    "@polkadot/api-contract": "^9.14.1",
+    "@talisman-connect/ui": "^1.1.1",
+    "@talisman-connect/wallets": "^1.1.3",
+    "@talismn/connect-components": "^1.1.7",
+    "@talismn/connect-ui": "^1.1.2",
+    "@talismn/connect-wallets": "^1.2.3",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
