--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/font": "13.1.6",
     "@polkadot/api": "^9.14.1",
     "@polkadot/api-contract": "^9.14.1",
+    "@polkadot/types": "^9.14.1",
     "@talisman-connect/ui": "^1.1.1",
     "@talisman-connect/wallets": "^1.1.3",
     "@talismn/connect-components": "^1.1.7",
